modified:   home_page.html 	modified:   places.html 	new file:   practice_places.html 	new file:   practice_search.html 	modified:   search.html

--- a/home_page.html
+++ b/home_page.html
@@ -54,32 +54,28 @@
       </div>
       <div class="places">
         <div class="tab">
-          <button
-            class="tabLink"
-            id="default"
-            onclick="openCity(event, 'Lingayen')"
-          >
+          <button class="tabLink" id="default" onclick="openCity(event, 'Lingayen')">
             Lingayen
           </button>
-          <button class="tabLink" onclick="openCity(event, 'Binmaley')">
+          <button class="tabLink" id="binmaley" onclick="openCity(event, 'Binmaley')">
             Binmaley
           </button>
-          <button class="tabLink" onclick="openCity(event, 'Manaoag')">
+          <button class="tabLink" id="manaoag" onclick="openCity(event, 'Manaoag')">
             Manaoag
           </button>
-          <button class="tabLink" onclick="openCity(event, 'Bolinao')">
+          <button class="tabLink" id="bolinao" onclick="openCity(event, 'Bolinao')">
             Bolinao
           </button>
-          <button class="tabLink" onclick="openCity(event, 'Sual')">
+          <button class="tabLink" id="sual" onclick="openCity(event, 'Sual')">
             Sual
           </button>
-          <button class="tabLink" onclick="openCity(event, 'Alaminos')">
+          <button class="tabLink" id="alaminos" onclick="openCity(event, 'Alaminos')">
             Alaminos
           </button>
-          <button class="tabLink" onclick="openCity(event, 'Burgos')">
+          <button class="tabLink" id="burgos" onclick="openCity(event, 'Burgos')">
             Burgos
           </button>
-          <button class="tabLink" onclick="openCity(event, 'Dasol')">
+          <button class="tabLink" id="dasol" onclick="openCity(event, 'Dasol')">
             Dasol
           </button>
         </div>
